# VIO_Course

./: LICENSE  README.md
Ch1/: VIO第一章作业.docx
Ch1/T2/: CMakeLists.txt  main.cpp
Ch10_Course_Project/: OpenMP.cpp  README.md
Ch10_Course_Project/course10/course10/: .~lock.euroc_mh05_groundtruth.csv#
Ch3/CurveFitting_LM/app/: CurveFitting.cpp
Ch3/CurveFitting_LM/backend/: edge.cc  problem.cc  problem.h  vertex.cc
Ch4/course4_home_work/course4/nullspace_test/: hessian_nullspace_test.cpp
Ch5/hw_course5_new/app/: TestMonoBA.cpp
Ch5/hw_course5_new/backend/: CMakeLists.txt  edge_reprojection.cc  edge_reprojection.h  imu_integration.cc  problem.cc  problem.h  vertex.h  vertex_inverse_depth.h  vertex_pose.cc  vertex_pose.h
Ch5/hw_course5_new/frontend/: camera.h
Ch6/course6_hw/: CMakeLists.txt  data.txt  different_noise.ods  different_observe_num.ods  muban.conf  muban_observe.conf  observe_num.txt  triangulate.cpp
Ch7/: experiment_result.ods
Ch7/VINS-Course/: CMakeLists.txt
Ch7/VINS-Course/config/: VINS_pose_output_asTUM2.txt  VINS_pose_output_asTUM2_noise_10_distcrete.txt  cam_pose.txt  cam_pose_tum_delete_first11rows.txt  euroc_config.yaml  imu_pose.txt  imu_pose_noise.txt  imu_pose_noise_10.txt  imu_pose_noise_30.txt  imu_pose_noise_45.txt  imu_pose_noise_60.txt
Ch7/VINS-Course/config/keyframe/: all_points_0.txt  all_points_1.txt  all_points_2.txt  all_points_3.txt
Ch7/VINS-Course/include/: System.h  estimator.h  feature_manager.h  feature_tracker.h
Ch7/VINS-Course/include/camodocal/camera_models/: Camera.h
Ch7/VINS-Course/include/utility/: utility.h
Ch7/VINS-Course/src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp
Ch7/VINS-Course/src/backend/: problem.cc
Ch7/VINS-Course/src/camera_models/camera_models/: CataCamera.cc
Ch7/VINS-Course/src/initial/: solve_5pts.cpp
Ch7/VINS-Course/test/: run_euroc.cpp
Ch7/homework_experiment/: experiment_result.ods
Ch7/vio_data_simulation/main/: gener_alldata.cpp
Ch7/vio_data_simulation/python_tool/: draw_points.py  draw_trajcory.py
Ch7/vio_data_simulation/src/: imu.cpp  param.h
